--- a/secondWED/index.html
+++ b/secondWED/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="calculator">
-		<div id="calcu-head"><span class="imyeah">© <a href="http://www.cnblogs.com/imyeah/" target="_blank">I'm Yeah!</a></span><h6>简单的计算器</h6></div>
+		<div id="calcu-head"><h6>简单的计算器</h6></div>
 		<form name="calculator" action="" method="get">
 			<div id="calcu-screen">
 				<input type="text" name="numScreen" class="screen" value="0" onfocus="this.blur();" />
@@ -40,7 +40,6 @@
 			</div>
 			<div id="calcu-foot">
 				<span id="note"></span>
-				<span class="welcome">欢迎使用javascript计算器！<a href="http://www.cnblogs.com/imyeah" target="_blank">反馈</a></span>
 			</div>
 		</form>
 	</div>
